<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">InTheKnow</string>
    <string name="my_logger">My Logger</string>
    <string name="logger_q1">Did you get some?</string>
    <string name="oral">oral</string>
    <string name="self">by myself</string>
    <string name="nah">nah</string>
    <string name="my_tests">My Tests</string>
    <string name="my_resources">My Resources</string>
    <string name="how_do_you_feel">How do you feel?</string>
    <string name="great">great</string>
    <string name="depressed">depressed</string>
    <string name="nervous">nervous</string>
    <string name="anxious">anxious</string>
    <string name="tired">tired</string>
    <string name="motivated">motivated</string>
    <string name="angry">angry</string>
    <string name="eh">eh</string>
    <string name="any_of_these_symptoms">Any of these symptoms?</string>
    <string name="nausea">nausea</string>
    <string name="night_sweats">night sweats</string>
    <string name="mouth_sores">mouth sores</string>
    <string name="vomiting">vomiting</string>
    <string name="muscle_aches">muscle aches</string>
    <string name="joint_pain">joint pain</string>
    <string name="infection">infection</string>
    <string name="sore_throat">sore throat</string>
    <string name="anything_else">Anything else?</string>
    <string name="i_felt">I felt...</string>
    <string name="submit">Submit</string>
    <string name="see_history">See history</string>
    <string name="add_new_event">Add new event</string>
    <string name="get_tested">Getting tested for HIV and other sexually
        transmitted diseases is quick and easy!</string>
    <string name="title_myTest">Get Tested</string>
    <string name="send_a_free_self_testing_kit">Send a free self-testing kit!</string>
    <string name="locations_near_me">Locations near me</string>
    <string name="textview">TextView</string>
    <string name="information">Learn More about how HIV testing works,
        why it is important, and what to do after getting your results. </string>
    <string name="currentevents">CurrentEvents</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_an_account">Create an Account</string>
    <string name="username">Username</string>
    <string name="vaginal">vaginal</string>
    <string name="anal">anal</string>
    <string name="non_penetrative">no penetration</string>
    <string name="logger_protection_qn">Did you use protection?</string>
    <string name="withdrawal">withdrawal</string>
    <string name="condom">condom</string>
    <string name="fertility_awareness">fertility awareness</string>
    <string name="iud">IUD</string>
    <string name="ring">ring</string>
    <string name="patch">patch</string>
    <string name="combo_pills">combo pill</string>
    <string name="mini_pills">mini pill</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="mycharts">My Charts</string>
    <string name="listview">See History</string>
    <string name="with_condom">with condom</string>
    <string name="hey_how_you_doing">Hey, how you doing?</string>
    <string name="button">Button</string>
</resources>