<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/LoginTitle2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:text="In-The-KNOW"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/LoginTitle3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/username"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/UsernameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/LoginTitle4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/password"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/PasswordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:inputType="textPersonName|textWebPassword" />

        <Button
            android:id="@+id/signinbutton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/roundedbutton"
            android:backgroundTint="@color/itk_blue"
            android:layout_marginTop="20dp"
            android:text="@string/sign_in" />

        <Button
            android:id="@+id/createAccountButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/roundedbutton"
            android:backgroundTint="@color/itk_blue"
            android:layout_marginTop="20dp"
            android:text="Register" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"/>



    </LinearLayout>
</FrameLayout>